added styling and small fixes to areas where forms populated incorrectly

--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,14 +1,13 @@
 <article class="post">
   <div class="title">
-    <a>{{title}}</a>
-    <span>({{post_text}})</span>
+    <a>{{title}}<br />({{post_text}})</a>
   </div>
-  <div class="meta">
+  <div class="post-footer">
     by
     {{user.username}}
     on
     {{format_date created_at}}
     |
-    <a href="/post/{{id}}"></a>
+    {{!-- <a href="/post/{{id}}"></a> --}}
   </div>
 </article>
