--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,10 @@
 * {
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
 }
 
-body, html {
+body,
+html {
+  background-color: grey;
   height: 100%;
   padding: 0;
   margin: 0;
@@ -12,13 +14,10 @@ body, html {
 
 a {
   text-decoration: none;
-  color: #225ca3;
+  /* color: ; */
   font-weight: bold;
-  transition: color .1s;
-}
-
-a:hover {
-  color: #3486eb;
+  transition: color 0.1s;
+  width: 100vw;
 }
 
 button {
@@ -27,7 +26,7 @@ button {
   padding: 1%;
   color: white;
   font-weight: bold;
-  transition: background-color .1s;
+  transition: background-color 0.1s;
   cursor: pointer;
   border-radius: 5px;
 }
@@ -39,15 +38,22 @@ button:hover {
 .post-list {
   margin: 0;
   padding: 0;
+  width: 25vw;
 }
 
-textarea, input {
-  padding: .5%;
+.post-footer {
+  border-top: 1px solid #000000;
+}
+
+textarea,
+input {
+  padding: 0.5%;
   border-radius: 5px;
   border: 1px solid #ccc;
 }
 
-textarea:focus, input:focus {
+textarea:focus,
+input:focus {
   outline: none;
   border: 1px solid #3486eb;
 }
@@ -81,9 +87,13 @@ header {
   align-items: center;
   padding: 0 1%;
 }
+header nav a {
+  padding: 10px;
+}
 
 header h1 {
-  font-size: 1em;
+  font-size: 3em;
+  /* border: 1px  #000000; */
 }
 
 main {
@@ -100,7 +110,7 @@ main {
   color: #225ca3;
   font-size: 100%;
   font-weight: bold;
-  transition: color .1s;
+  transition: color 0.1s;
   margin-left: 16px;
 }
 
@@ -118,47 +128,25 @@ main {
 }
 
 .post {
+  background-color: cornsilk;
+  text-align: center;
   margin-bottom: 2%;
   line-height: 150%;
+  border: #000000 solid;
+  border-radius: 10px;
+  padding: 0.01em 16px;
+  line-height: 2em;
 }
-
+/* 
 .post .title span {
   font-style: italic;
   font-size: 90%;
   color: #7d7d7d;
-}
+} */
 
 .edit-link {
   display: block;
   margin: -1.5% 0 2% 0;
-}
-
-.upvote-btn {
-  background-color: #197d0f;
-  transition: background-color .1s;
-}
-
-.upvote-btn:hover {
-  background-color: #1f9c13;
-}
-
-.comment-form {
-  margin-bottom: 5%;
-}
-
-.comment {
-  padding: 1%;
-  margin-bottom: 1%;
-}
-
-.comment:nth-child(odd) {
-  background-color: #fff5eb;
-}
-
-.comment .meta {
-  font-size: 90%;
-  margin-bottom: .5%;
-  opacity: .6;
 }
 
 .new-post-form input {
