--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -6,7 +6,7 @@
   <form class="edit-post-form">
     <div>
       <input name="post-title" type="text" value="{{post.title}}" />
-      <span>({{post.post_text}})</span>
+      <input name="post-text" type="text" value="{{post.post_text}}" />
     </div>
     <div>
       by you on
