--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tech Blog</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
 
@@ -11,13 +17,15 @@
     <div class="wrapper">
       <header>
         <h1>
-          <a href="/">Tech Blog</a>
+          Tech Blog
         </h1>
         <nav>
           {{#if loggedIn}}
+            <a href="/">Home </a>
             <a href="/dashboard">dashboard</a>
             <button id="logout" class="btn-no-style">logout</button>
           {{else}}
+            <a href="/">Home </a>
             <a href="/login">login</a>
           {{/if}}
         </nav>
